--- a/style.css
+++ b/style.css
@@ -186,3 +186,44 @@ li{
             width: 7%;
         }
     }
+
+    .newsletters {
+        padding: 80px 0 0 20px;
+        background-color: rgba(255, 255, 255, 0.8); /* A slight white background to make the text stand out */
+        border-radius: 10px;
+        margin: 0 0 0 40px;
+    }
+    
+    .newsletters h2 {
+        text-align: center;
+        color: #333;
+        margin-bottom: 20px;
+        border-bottom: 2px solid rgb(140, 204, 168);
+        padding-bottom: 10px;
+    }
+    
+    .newsletters ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    
+    .newsletters ul li {
+        padding: 10px 0;
+        text-align: center;
+    }
+    
+    .newsletters ul li a {
+        text-decoration: none;
+        color: rgb(140, 204, 168);
+        font-size: 1.1em;
+        transition: color 0.3s;
+    }
+    
+    .newsletters ul li a:hover {
+        color: rgb(9, 38, 22);
+    }
+    
+    .newsletters h1 {
+        margin: 0 auto;
+        padding: 0;
+    }
